--- a/aber/software-engineering/lit-review/references.bib
+++ b/aber/software-engineering/lit-review/references.bib
@@ -8,3 +8,241 @@
   year={1997},
   organization={Elsevier}
 }
+@article{nussinov1980fast,
+  title={Fast algorithm for predicting the secondary structure of single-stranded RNA},
+  author={Nussinov, Ruth and Jacobson, Ann B},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={77},
+  number={11},
+  pages={6309--6313},
+  year={1980},
+  publisher={National Acad Sciences}
+}
+
+@article{mccaskill1990equilibrium,
+  title={The equilibrium partition function and base pair binding probabilities for RNA secondary structure},
+  author={McCaskill, John S},
+  journal={Biopolymers},
+  volume={29},
+  number={6-7},
+  pages={1105--1119},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{zuker1981optimal,
+  title={Optimal computer folding of large RNA sequences using thermodynamics and auxiliary information},
+  author={Zuker, Michael and Stiegler, Patrick},
+  journal={Nucleic acids research},
+  volume={9},
+  number={1},
+  pages={133--148},
+  year={1981},
+  publisher={Oxford Univ Press}
+}
+
+@article{do2006contrafold,
+  title={CONTRAfold: RNA secondary structure prediction without physics-based models},
+  author={Do, Chuong B and Woods, Daniel A and Batzoglou, Serafim},
+  journal={Bioinformatics},
+  volume={22},
+  number={14},
+  pages={e90--e98},
+  year={2006},
+  publisher={Oxford Univ Press}
+}
+
+@article{laing2010computational,
+  title={Computational approaches to 3D modeling of RNA},
+  author={Laing, Christian and Schlick, Tamar},
+  journal={Journal of Physics: Condensed Matter},
+  volume={22},
+  number={28},
+  pages={283101},
+  year={2010},
+  publisher={IOP Publishing}
+}
+
+@article{rivas2013four,
+  title={The four ingredients of single-sequence RNA secondary structure prediction. A unifying perspective},
+  author={Rivas, Elena},
+  journal={RNA biology},
+  volume={10},
+  number={7},
+  pages={1185--1196},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{mathews1999expanded,
+  title={Expanded sequence dependence of thermodynamic parameters improves prediction of RNA secondary structure},
+  author={Mathews, David H and Sabina, Jeffrey and Zuker, Michael and Turner, Douglas H},
+  journal={Journal of molecular biology},
+  volume={288},
+  number={5},
+  pages={911--940},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@techreport{kasami1965efficient,
+  title={AN EFFICIENT RECOGNITION AND SYNTAXANALYSIS ALGORITHM FOR CONTEXT-FREE LANGUAGES.},
+  author={Kasami, Tadao},
+  year={1965},
+  institution={DTIC Document}
+}
+
+@article{younger1967recognition,
+  title={Recognition and parsing of context-free languages in time n 3},
+  author={Younger, Daniel H},
+  journal={Information and control},
+  volume={10},
+  number={2},
+  pages={189--208},
+  year={1967},
+  publisher={Elsevier}
+}
+
+@article{cocke1969programming,
+  title={Programming languages and their compilers: Preliminary notes},
+  author={Cocke, John},
+  year={1969},
+  publisher={Courant Institute of Mathematical Sciences, New York University}
+}
+
+@article{giegerich2014introduction,
+  title={Introduction to stochastic context free grammars},
+  author={Giegerich, Robert},
+  journal={RNA Sequence, Structure, and Function: Computational and Bioinformatic Methods},
+  pages={85--106},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{knudsen1999rna,
+  title={RNA secondary structure prediction using stochastic context-free grammars and evolutionary history.},
+  author={Knudsen, Bjarne and Hein, Jotun},
+  journal={Bioinformatics},
+  volume={15},
+  number={6},
+  pages={446--454},
+  year={1999},
+  publisher={Oxford Univ Press}
+}
+
+@article{knudsen2003pfold,
+  title={Pfold: RNA secondary structure prediction using stochastic context-free grammars},
+  author={Knudsen, Bjarne and Hein, Jotun},
+  journal={Nucleic acids research},
+  volume={31},
+  number={13},
+  pages={3423--3428},
+  year={2003},
+  publisher={Oxford Univ Press}
+}
+
+@article{lari1990estimation,
+  title={The estimation of stochastic context-free grammars using the inside-outside algorithm},
+  author={Lari, Karim and Young, Steve J},
+  journal={Computer speech \& language},
+  volume={4},
+  number={1},
+  pages={35--56},
+  year={1990},
+  publisher={Elsevier}
+}
+
+@article{deigan2009accurate,
+  title={Accurate SHAPE-directed RNA structure determination},
+  author={Deigan, Katherine E and Li, Tian W and Mathews, David H and Weeks, Kevin M},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={1},
+  pages={97--102},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+
+@article{ding2003statistical,
+  title={A statistical sampling algorithm for RNA secondary structure prediction},
+  author={Ding, Ye and Lawrence, Charles E},
+  journal={Nucleic acids research},
+  volume={31},
+  number={24},
+  pages={7280--7301},
+  year={2003},
+  publisher={Oxford Univ Press}
+}
+
+@article{ding2005rna,
+  title={RNA secondary structure prediction by centroids in a Boltzmann weighted ensemble},
+  author={Ding, YE and Chan, Chi Yu and Lawrence, Charles E},
+  journal={Rna},
+  volume={11},
+  number={8},
+  pages={1157--1166},
+  year={2005},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@book{rousseeuw1990finding,
+  title={Finding Groups in Data},
+  author={Rousseeuw, Peter J and Kaufman, L},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{do2006contrafold,
+  title={CONTRAfold: RNA secondary structure prediction without physics-based models},
+  author={Do, Chuong B and Woods, Daniel A and Batzoglou, Serafim},
+  journal={Bioinformatics},
+  volume={22},
+  number={14},
+  pages={e90--e98},
+  year={2006},
+  publisher={Oxford Univ Press}
+}
+
+@article{rivas1999dynamic,
+  title={A dynamic programming algorithm for RNA structure prediction including pseudoknots},
+  author={Rivas, Elena and Eddy, Sean R},
+  journal={Journal of molecular biology},
+  volume={285},
+  number={5},
+  pages={2053--2068},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@article{reeder2007pknotsrg,
+  title={pknotsRG: RNA pseudoknot folding including near-optimal structures and sliding windows},
+  author={Reeder, Jens and Steffen, Peter and Giegerich, Robert},
+  journal={Nucleic acids research},
+  volume={35},
+  number={suppl 2},
+  pages={W320--W324},
+  year={2007},
+  publisher={Oxford Univ Press}
+}
+
+@article{bindewald2010cylofold,
+  title={CyloFold: secondary structure prediction including pseudoknots},
+  author={Bindewald, Eckart and Kluth, Tanner and Shapiro, Bruce A},
+  journal={Nucleic acids research},
+  volume={38},
+  number={suppl 2},
+  pages={W368--W372},
+  year={2010},
+  publisher={Oxford Univ Press}
+}
+
+@article{lorenz2011viennarna,
+  title={ViennaRNA Package 2.0},
+  author={Lorenz, Ronny and Bernhart, Stephan H and Zu Siederdissen, Christian Hoener and Tafer, Hakim and Flamm, Christoph and Stadler, Peter F and Hofacker, Ivo L},
+  journal={Algorithms for Molecular Biology},
+  volume={6},
+  number={1},
+  pages={1},
+  year={2011},
+  publisher={BioMed Central}
+}
